@@ -1,6 +1,8 @@
 Changes
 examples/ex1.pl
 inc/Module/Install.pm
+inc/Module/Install/AuthorRequires.pm
+inc/Module/Install/AuthorTests.pm
 inc/Module/Install/Base.pm
 inc/Module/Install/Can.pm
 inc/Module/Install/Fetch.pm
@@ -15,21 +17,21 @@ MANIFEST			This list of files
 META.yml
 README
 SIGNATURE
-t/Tags-Output-Indent/00-use.t
-t/Tags-Output-Indent/01-version.t
-t/Tags-Output-Indent/02-pod_coverage.t
-t/Tags-Output-Indent/03-pod.t
-t/Tags-Output-Indent/04-new.t
-t/Tags-Output-Indent/05-comment.t
-t/Tags-Output-Indent/06-simple_tag.t
-t/Tags-Output-Indent/07-preserve_from_attribute.t
-t/Tags-Output-Indent/08-preserve_from_constructor.t
-t/Tags-Output-Indent/09-tag.t
-t/Tags-Output-Indent/10-tags_combine.t
-t/Tags-Output-Indent/11-no_simple.t
-t/Tags-Output-Indent/12-raw.t
-t/Tags-Output-Indent/13-cdata.t
-t/Tags-Output-Indent/14-auto_flush.t
-t/Tags-Output-Indent/15-attributes.t
-t/Tags-Output-Indent/16-instruction.t
-t/Tags-Output-Indent/17-data_callback.t
+t/Tags-Output-Indent/01-use.t
+t/Tags-Output-Indent/02-version.t
+t/Tags-Output-Indent/03-new.t
+t/Tags-Output-Indent/04-comment.t
+t/Tags-Output-Indent/05-simple_tag.t
+t/Tags-Output-Indent/06-preserve_from_attribute.t
+t/Tags-Output-Indent/07-preserve_from_constructor.t
+t/Tags-Output-Indent/08-tag.t
+t/Tags-Output-Indent/09-tags_combine.t
+t/Tags-Output-Indent/10-no_simple.t
+t/Tags-Output-Indent/11-raw.t
+t/Tags-Output-Indent/12-cdata.t
+t/Tags-Output-Indent/13-auto_flush.t
+t/Tags-Output-Indent/14-attributes.t
+t/Tags-Output-Indent/15-instruction.t
+t/Tags-Output-Indent/16-data_callback.t
+xt/Tags-Output-Indent/01-pod_coverage.t
+xt/Tags-Output-Indent/02-pod.t
