@@ -8,9 +8,16 @@ use inc::Module::Install;
 # Definition.
 abstract 'Indented output for Tags.';
 author 'Michal Spacek <skim@cpan.org>';
+author_requires 'English' => 0;
+author_requires 'File::Object' => 0.01;
+author_requires 'Test::More' => 0;
+author_requires 'Test::NoWarnings' => 0;
+author_requires 'Test::Pod' => 0;
+author_requires 'Test::Pod::Coverage' => 0;
 license 'bsd';
 name 'Tags-Output-Indent';
 readme_from 'Indent.pm';
+recursive_author_tests('xt');
 requires 'Error::Pure' => 0.05;
 requires 'Indent' => 0.01;
 requires 'Indent::Word' => 0.01;
@@ -30,8 +37,6 @@ test_requires 'File::Object' => 0.01;
 test_requires 'IO::Scalar' => 0;
 test_requires 'Test::More' => 0;
 test_requires 'Test::NoWarnings' => 0;
-test_requires 'Test::Pod' => 0;
-test_requires 'Test::Pod::Coverage' => 0;
 tests_recursive;
 version '0.04';
 
